--- a/home.css
+++ b/home.css
@@ -7,35 +7,44 @@
   flex-direction: row;
   justify-content: flex-end;
 }
-.home-image {
+.home-container1 {
+  flex: 0 0 auto;
   width: 1657px;
-  height: 1001px;
-  object-fit: cover;
-}
-.home-right-sidebar {
-  width: 499px;
-  height: 998px;
+  height: 2319px;
   display: flex;
-  position: relative;
-  padding-top: var(--dl-space-space-twounits);
-  padding-left: var(--dl-space-space-twounits);
-  padding-right: 0px;
+  align-items: flex-end;
   flex-direction: column;
-  padding-bottom: var(--dl-space-space-twounits);
-  justify-content: space-between;
+}
+.home-top {
+  width: 100%;
+  height: 1000px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+}
+.home-first {
+  width: 200px;
+  height: 1127px;
+  display: flex;
+  align-self: flex-end;
+  align-items: flex-start;
+  margin-bottom: 0px;
+  flex-direction: column;
 }
 .home-nav {
-  width: 236px;
+  width: 100%;
+  height: 100%;
   display: flex;
   align-self: stretch;
   align-items: flex-start;
-  padding-top: 0px;
+  padding-top: 45px;
   padding-left: 0px;
   padding-right: 0px;
   flex-direction: column;
   padding-bottom: 0px;
 }
-.home-image1 {
+.home-image {
   width: 98px;
   height: 309px;
   object-fit: cover;
@@ -117,8 +126,13 @@
   letter-spacing: 1px;
   text-transform: lowercase;
 }
-@media(max-width: 767px) {
-  .home-right-sidebar {
-    height: 70vh;
-  }
+.home-container2 {
+  width: 100%;
+  border: 2px dashed rgba(120, 120, 120, 0.4);
+  height: 1000px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  background-color: #F1FBFA;
 }
