--- a/home.css
+++ b/home.css
@@ -8,10 +8,10 @@
   justify-content: flex-end;
 }
 .home-container1 {
-  flex: 0 0 auto;
-  width: 1657px;
-  height: 2319px;
+  width: 100%;
+  height: 3263px;
   display: flex;
+  position: relative;
   align-items: flex-end;
   flex-direction: column;
 }
@@ -19,32 +19,52 @@
   width: 100%;
   height: 1000px;
   display: flex;
+  position: relative;
+  align-self: flex-start;
+  align-items: center;
+  flex-direction: row;
+  justify-content: center;
+}
+.home-container2 {
+  width: 100%;
+  height: 1138px;
+  display: flex;
   align-items: center;
   flex-direction: column;
   justify-content: center;
 }
+.home-image {
+  width: 100%;
+  height: 1627px;
+  object-fit: cover;
+}
 .home-first {
-  width: 200px;
-  height: 1127px;
+  width: 318px;
+  height: 100%;
   display: flex;
   align-self: flex-end;
-  align-items: flex-start;
+  align-items: center;
+  padding-top: 45px;
+  padding-left: var(--dl-space-space-twounits);
   margin-bottom: 0px;
   flex-direction: column;
+  padding-bottom: 45px;
+  justify-content: flex-start;
 }
 .home-nav {
   width: 100%;
-  height: 100%;
+  height: 955px;
   display: flex;
   align-self: stretch;
+  margin-top: 0px;
   align-items: flex-start;
-  padding-top: 45px;
+  padding-top: 0px;
   padding-left: 0px;
   padding-right: 0px;
   flex-direction: column;
   padding-bottom: 0px;
 }
-.home-image {
+.home-image1 {
   width: 98px;
   height: 309px;
   object-fit: cover;
@@ -126,13 +146,21 @@
   letter-spacing: 1px;
   text-transform: lowercase;
 }
-.home-container2 {
+.home-container3 {
   width: 100%;
   border: 2px dashed rgba(120, 120, 120, 0.4);
-  height: 1000px;
+  height: 900px;
   display: flex;
+  margin-top: 403px;
   align-items: center;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
   background-color: #F1FBFA;
+}
+@media(max-width: 1600px) {
+  .home-nav {
+    width: 229px;
+    margin-right: var(--dl-space-space-oneandhalfunits);
+    padding-bottom: 0px;
+  }
 }
